Send parsed JSON data to a second, presenter window
A second window is created when the app is launched, but is invisible.
When the user requests that their markup text be parsed, the second
window is sent the parsed JSON data, generates the Elm model as the
first window still does, at then appears.

--- a/src/editor.html
+++ b/src/editor.html
@@ -1,13 +1,13 @@
 <html>
 
   <head>
-    <title>Hello World</title>
+    <title>Editor Window</title>
   </head>
 
   <body>
     <div id="container"></div>
 
-    <script type="text/javascript" src="editor.js"></script>
+    <script>require("./editor.js")</script>
   </body>
 
 </html>
