--- a/src/editor.html
+++ b/src/editor.html
@@ -3,6 +3,7 @@
   <head>
     <title>Editor Window</title>
     <link href="resources/css/editor.css" rel="stylesheet">
+    <link href="resources/css/materialIcons.css" rel="stylesheet">
   </head>
 
   <body>
