Simple bulleted list component, command: "itemize"

--- a/src/presenter.html
+++ b/src/presenter.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Presenter Window</title>
+  <link rel="import" href="components/itemize.html" id="itemize_import">
   <link rel="import" href="components/title.html" id="title_import">
 </head>
 
