--- a/src/presenter.html
+++ b/src/presenter.html
@@ -3,14 +3,17 @@
 
 <head>
   <title>Presenter Window</title>
-  <link rel="import" href="components/itemize.html" id="itemize_import">
-  <link rel="import" href="components/title.html" id="title_import">
 </head>
 
 <body>
   <div id="container"></div>
 
   <script>require("./presenter.js");</script>
+
+  <script src="WebComponentsLibrarySpecV0.js"></script>
+
+  <link rel="import" href="components/itemize.html" id="itemize_import">
+  <link rel="import" href="components/title.html" id="title_import">
 </body>
 
 </html>
