Restructure src directories

--- a/src/presenter/index.html
+++ b/src/presenter/index.html
@@ -10,7 +10,7 @@
 
   <script>require("./presenter.js");</script>
 
-  <script src="WebComponentsLibrarySpecV0.js"></script>
+  <script src="../WebComponentsLibrarySpecV0.js"></script>
 
   <link rel="import" href="components/itemize.html" id="itemize_import">
   <link rel="import" href="components/title.html" id="title_import">
