--- a/src/presenter/index.html
+++ b/src/presenter/index.html
@@ -12,8 +12,7 @@
 
   <script src="../WebComponentsLibrarySpecV0.js"></script>
 
-  <link rel="import" href="components/itemize.html" id="itemize_import">
-  <link rel="import" href="components/title.html" id="title_import">
+  <link rel="import" href="components/import.html" id="import_import">
 </body>
 
 </html>
