--- a/src/presenter/index.html
+++ b/src/presenter/index.html
@@ -19,7 +19,7 @@
       opacity: 1.0;
     }
     * {
-      transition: all .3s ease;
+      transition: opacity .3s ease;
     }
   </style>
 </head>
@@ -32,6 +32,7 @@
   <script src="../WebComponentsLibrarySpecV0.js"></script>
 
   <link rel="import" href="components/import.html" id="import_import">
+  <link rel="import" href="components/hidden.html" id="hidden_import">
 </body>
 
 </html>
