--- a/src/presenter/index.html
+++ b/src/presenter/index.html
@@ -33,6 +33,8 @@
 
   <link rel="import" href="components/import.html" id="import_import">
   <link rel="import" href="components/hidden.html" id="hidden_import">
+
+  <span id="currentDirectory" data-directory=""></span>
 </body>
 
 </html>
