--- a/src/presenter/index.html
+++ b/src/presenter/index.html
@@ -12,14 +12,11 @@
       left: 0;
       right: 0;
     }
-    *[displaying="hidden"] {
+    *[displaying="hidden"], *[displaying="seen"], *[displaying="coming"] {
       opacity: 0.0;
     }
-    *[displaying="showing"] {
+    *[displaying="showing"], *[displaying="child-showing"] {
       opacity: 1.0;
-    }
-    * {
-      transition: opacity .3s ease;
     }
   </style>
 </head>
