Move material icons as a npm dependecy, removing source from the repo

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Editor Window</title>
     <link href="resources/css/editor.css" rel="stylesheet">
-    <link href="resources/css/materialIcons.css" rel="stylesheet">
+    <link href="../node_modules/material-design-icons/iconfont/material-icons.css" rel="stylesheet">
   </head>
 
   <body>
